# Serval

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-windows.yml  release.yml  rust.yml
assets/: dummy.xmp
docs/: tags_csv_schema.md
src/: filter.pest  lib.rs  main.rs  ocr.rs  schema.rs  tags.rs  utils.rs
